--- a/.gitignore
+++ b/.gitignore
@@ -138,3 +138,4 @@ templates/interactive-virtual-reality.html
 .idea/workspace.xml
 templates/product-rendering.html
 templates/contact.html
+templates/portfolio.html
