--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,4 @@ templates/interactive-virtual-reality.html
 templates/product-rendering.html
 templates/contact.html
 templates/portfolio.html
+templates/3d-furniture-rendering.html
