--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,4 @@ templates/product-rendering.html
 templates/contact.html
 templates/portfolio.html
 templates/3d-furniture-rendering.html
+templates/404.html
