--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,4 @@ templates/contact.html
 templates/portfolio.html
 templates/3d-furniture-rendering.html
 templates/404.html
+templates/thank-you.html
